fix(commits): fix dark mode text color on dragging

--- a/src/_theme-styles.scss
+++ b/src/_theme-styles.scss
@@ -2,6 +2,7 @@
 
 @mixin color($theme) {
   background-color: mat.get-theme-color($theme, background);
+  color: mat.get-theme-color($theme, on-surface);
 
   a:not([class*='mdc-button']) {
     text-decoration: none;
